sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:3: error: not found: value t
	t=0;
        ^BasicPancake:5: error: not found: value max
		max=getRayonCrepe(t-1);
                ^BasicPancake:6: error: not found: value ind
		ind=t-1;
                ^BasicPancake:7: error: not found: value t
		for (i <- t-2 to 0 by -1) {
                          ^BasicPancake:13: error: not found: value ind
		if (ind>t) {
                    ^BasicPancake:14: error: not found: value ind
			retourne(getTaillePile()-ind);
                                                 ^BasicPancake:17: error: not found: value t
		t=t-1;
                ^